noch mehr refactoring, diesmal in model package